# sherpa

./: .gitignore  README.md  pyproject.toml  requirements.txt
sherpa/: cli.py  config.py  constants.py  git.py  hooks.py  review_store.py  supported_models.py  utils.py
sherpa/commands/: __init__.py  base.py  commit.py  config.py  fix.py  hook.py  review.py  review_report.py  token.py
sherpa/commands/address/: __init__.py  git.py  interface.py  suggest_fix.py
sherpa/commands/review/: __init__.py  report.py
sherpa/config/: __init__.py  tokens.py  ui.py
sherpa/prompts/: fix_issue.py  review.py
