[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sherpa"
version = "1.0.0"
description = "Boost your git commands with AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "agnos @ file:///Users/louis.tricot/side-projects/agnos",
]

[project.scripts]
sherpa = "sherpa.cli:main"
